--- a/assets/css/untitled-1.css
+++ b/assets/css/untitled-1.css
@@ -7,7 +7,22 @@
   }
 }
 
+@media (max-width: 750px) {
+  .autosync {
+    padding: 10px !important;
+    padding-top: 70px !important;
+    text-align: center !important;
+  }
+}
+
 .showStatex {
   display: none;
+}
+
+@media (max-width: 750px) {
+  .autosyncx {
+    padding: 10px !important;
+    text-align: center !important;
+  }
 }
 
